--- a/nx.json
+++ b/nx.json
@@ -11,8 +11,7 @@
         "cacheableOperations": [
           "build",
           "lint",
-          "test",
-          "e2e"
+          "test"
         ]
       }
     }
@@ -32,12 +31,6 @@
         "default",
         "^production",
         "{workspaceRoot}/jest.preset.js"
-      ]
-    },
-    "e2e": {
-      "inputs": [
-        "default",
-        "^production"
       ]
     },
     "lint": {
@@ -68,8 +61,7 @@
     "@nrwl/angular:application": {
       "style": "scss",
       "linter": "eslint",
-      "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
+      "unitTestRunner": "jest"
     },
     "@nrwl/angular:library": {
       "linter": "eslint",
